--- a/bitrix/templates/prom_s1/components/intec.universe/main.footer/template.1/templates/template.4/style.css
+++ b/bitrix/templates/prom_s1/components/intec.universe/main.footer/template.1/templates/template.4/style.css
@@ -93,7 +93,8 @@
   background-size: auto;
   background-position: 0 0;
   background-repeat: no-repeat;
-  background-image: url("./images/iconss.png");
+  /*background-image: url("./images/iconss.png");*/
+  background-image: url("./images/iconss.webp");
   filter: grayscale(1) opacity(0.6);
 }
 .c-footer.c-footer-template-1 .widget-view .widget-view-4 .widget-panel {
